# fantasy-optimizer

./: .gitignore  LICENSE  README.md  config.example.toml  pyproject.toml
fantasy_optimizer/: __init__.py  cli.py  client.py  config.py  optimizer.py  recommend.py  schedule.py  simulate.py  valuation.py
tests/: test_optimizer.py  test_recommend.py  test_schedule.py  test_simulate.py  test_valuation.py
