[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fantasy-optimizer"
version = "0.1.0"
description = "Streaming pick optimizer for ESPN fantasy men's basketball (H2H 8-cat)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "wmitc" }]
dependencies = [
    "espn-api>=0.45",
    "pandas>=2.0",
    "scipy>=1.11",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
fantasy-optimizer = "fantasy_optimizer.cli:main"

[tool.setuptools.packages.find]
include = ["fantasy_optimizer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
